--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="container">
         <div class="nav">
           <div class="logo">
-            <a href="/">RHJ</a>
+            <img src="img/logo.jpg" alt="" />
           </div>
           <nav>
             <ul>
@@ -23,12 +23,26 @@
               <li><a href="#Portofolios">portofolio</a></li>
             </ul>
           </nav>
-          <!-- <div class="burger">
+          <div class="burger">
             <div class="line-1"></div>
             <div class="line-2"></div>
             <div class="line-3"></div>
-          </div> -->
+          </div>
         </div>
+        <section class="hero">
+          <div class="hero-left">
+            <h3 class="pre-title">My Name is</h3>
+
+            <h1 class="hero-name">Rian Hery <span>Juniarto</span></h1>
+            <p>
+              <bold>i am a student at Pasundan University</bold>
+            </p>
+          </div>
+
+          <div class="hero-right">
+            <img src="img/bahan_foto2-removebg-preview.png" />
+          </div>
+        </section>
       </div>
     </header>
 
