--- a/index.html
+++ b/index.html
@@ -47,5 +47,54 @@
     </header>
 
     <!-- end header -->
+    <section id="services">
+      <div class="services main-container">
+        <h1 class="section-title services-title">About Me</h1>
+        <div class="grid-3">
+          <div class="service">
+            <h4>Web Development</h4>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae voluptate molestiae perspiciatis sunt fugit libero
+              quaerat non vitae aspernatur laboriosam dolorem hic est maxime,
+              eum porro cupiditate incidunt quia ullam.
+            </p>
+          </div>
+          <div class="grid-3">
+            <div class="service">
+              <h4>Web Development</h4>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Repudiandae voluptate molestiae perspiciatis sunt fugit libero
+                quaerat non vitae aspernatur laboriosam dolorem hic est maxime,
+                eum porro cupiditate incidunt quia ullam.
+              </p>
+            </div>
+            <div class="grid-3">
+              <div class="service">
+                <h4>Web Development</h4>
+                <p>
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Repudiandae voluptate molestiae perspiciatis sunt fugit libero
+                  quaerat non vitae aspernatur laboriosam dolorem hic est
+                  maxime, eum porro cupiditate incidunt quia ullam.
+                </p>
+              </div>
+              <div class="grid-3">
+                <div class="service">
+                  <h4>Web Development</h4>
+                  <p>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Repudiandae voluptate molestiae perspiciatis sunt fugit libero
+                    quaerat non vitae aspernatur laboriosam dolorem hic est
+                    maxime, eum porro cupiditate incidunt quia ullam.
+                  </p>
+                </div>
+               
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
