--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 
             <h1 class="hero-name">Rian Hery <span>Juniarto</span></h1>
             <p>
-              <bold>i am a student at Pasundan University</bold>
+             i am a student at Pasundan University
             </p>
           </div>
 
@@ -151,7 +151,7 @@
                 </div>
                 <button type="submit">send massage</button>
               </form>
-            </form>>
+            </form>
             </div>
             <div class="contact-info">
               <h3>CONTACT INFOMATION</h3>
@@ -160,9 +160,8 @@
               <p>Karawang,Indonesia</p>
             </div>
           </div>
-          
-
         </div>
+       
 
 
       </section>
