--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
        <nav class="apaweh">
         <div class="">
-          <img src="/img/logo.jpg" alt="my-avatar">
+          <img src="img/logo.jpg" alt="My avatar">
         </div>
         <div id="menu-icon" class="menu-icon">
           <i class="ph ph-list"></i>
